corrected misalignments caused by no-icon tabs

--- a/src-built-in/components/assets/css/_styleWhitelabel.css
+++ b/src-built-in/components/assets/css/_styleWhitelabel.css
@@ -24,6 +24,28 @@
     border-radius: 4px;
 }
 
+.fsbl-tab-logo {
+    margin: 0 7px;
+    width: 13px;
+    height: 12px;
+    padding-top: 2px;
+    color: var(--titlebar-tab-icon-font-color);
+}
+
+.fsbl-tab-close {
+    font-size: 8px;
+    padding: 0px 7px 3px 7px;
+    visibility:hidden;
+    cursor: pointer;
+    width:8px;
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    right: 0;
+}
+
 .searchInput::after {
     bottom: 2px !important;
 }
